# minutes-maker

./: .gitignore  Makefile  README.md  default.conf  main.py  pyproject.toml
assets/: README-ja.md
docker/cpu/: Dockerfile  docker-compose.yaml
docker/cuda/: Dockerfile  docker-compose.yaml
src/minutes_maker/: __init__.py  _prompts.py  _summarizer.py  _transcriber.py  minutes_maker.py
view/minutes-maker/: package-lock.json  package.json
view/minutes-maker/public/: index.html  manifest.json
view/minutes-maker/src/: App.tsx
view/minutes-maker/src/Components/: ApiResponseDataSchema.ts  AppContext.ts  FileUploader.tsx  ResultDisplay.tsx  Title.tsx
